--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,3 +1,7 @@
+.project {
+    margin-bottom: 50px;
+}
+
 .project-header h1 {
     text-align: left;
     font-weight: 400;
@@ -14,6 +18,12 @@
     display: flex;
     justify-content: flex-end;
     gap: 10px; 
+}
+
+.more {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
 }
 
 @media screen and (max-width: 768px) {
