--- a/src/components/About.css
+++ b/src/components/About.css
@@ -40,3 +40,27 @@
     text-align: left;
     color: #555;
 }
+
+.about-component {
+    margin: 0;
+    color: #666;
+    border-top: 1px solid #666;
+}
+
+.about-component h1 {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: left;
+    text-decoration: none;
+}
+
+.about-component h2 {
+    text-align: left;
+    color: black;
+    margin: 0;
+    padding: 0;
+    font-size: 6rem;
+    font-weight: 400;
+    line-height: 6.5rem;
+}
