--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -9,3 +9,8 @@
     border-bottom: 1px solid #666;
     margin-bottom: 10px;
 }
+
+.contact-content {
+    display: flex;
+    justify-content: space-between;
+}
