--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -9,10 +9,10 @@
     width: 100%;
     z-index: 1000;
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+    margin: 0 6rem;
 }
 
 .navigation .logo {
-    margin: 0 0 0 6rem;
     flex: 1;
     text-align: left;
 }
@@ -20,6 +20,22 @@
 .navigation .logo img {
     padding: 1rem 0;
     width: 3rem; 
+}
+
+.content {
+    margin-right: 12.5rem;
+    text-align: right;
+}
+
+.content a {
+    text-decoration: none;
+    color: #333;
+    margin-left: 30px;
+}
+
+.content a:hover {
+    border-bottom: 1px solid #333;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
