--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,3 +1,7 @@
+.navigation::before {
+
+}
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -10,6 +14,8 @@
     z-index: 1000;
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     margin: 0 6rem;
+    transform: translateY(-200%);
+    animation: slideIn 5s ease-in forwards;
 }
 
 .navigation .logo {
@@ -36,6 +42,13 @@
 .content a:hover {
     border-bottom: 1px solid #333;
     cursor: pointer;
+}
+
+@keyframes slideIn {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @media screen and (max-width: 768px) {
