--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  min-width: 1440px;
+  /* max-width: 1440px;
+  min-width: none; */
   margin: 0 auto;
   padding: 6rem;
   text-align: center;
