--- a/src/cards/contactForm.css
+++ b/src/cards/contactForm.css
@@ -61,3 +61,9 @@ form button:hover {
     background-color: #666;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1420px) {
+    .contact-form {
+        width: 100%;
+    }
+}
