--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -14,3 +14,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1420px) {
+    .contact-content {
+        flex-direction: column;
+    }
+}
